js/src/App.css
.sub-table {
    margin: 0.3em 0 0.7em 2.5em;
}

.lang-code {
    width: 1.8em;
    font-weight: bold;
}

/*
* Fixes https://github.com/elastic/eui/issues/3854
*/
@keyframes growExpandedRow {
    0% {
        max-height: 0;
    }
    90% {
        max-height: 1000px;
    }
    100% {
        max-height: max-content;
    }
}

/*
 * Fix nested tables hover highlighting
 */
.euiTableRow.euiTableRow-isExpandedRow table .euiTableRowCell {
    background-color: inherit;
}

.diff-view {
    tab-size: 4;
}

